# webMath

./: README.md  pyproject.toml
calculator/: settings.py  urls.py
hendese/: apps.py  forms.py  urls.py  views.py
hendese/templates/: kvadratTenliyi.html
