[tool.poetry]
name = "webcalculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.7"
drf-yasg = "1.21.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
